--- a/footer.html
+++ b/footer.html
@@ -13,12 +13,12 @@
         <div class="widget">
           <h4 class="title">探索Panabit</h4>
           <ul>
-            <li><a href="./aboutIndex.html" target="_top">为何选择派网</a></li>
+            <li><a href="./aboutIndex.html#header-bottom" target="_top">为何选择派网</a></li>
             <li><a href="#" data-toggle="modal" data-target="#myModal">免费试用</a></li>
-            <li><a href="./productIsp.html" target="_top">产品</a></li>
+            <li><a href="./productIsp.html#product-bottom-header" target="_top">产品</a></li>
             <li><a href="./solution.html" target="_top">解决方案</a></li>
-            <li><a href="./aboutClient.html" target="_top">客户案例</a></li>
-            <li><a href="./aboutNews.html" target="_top">新闻</a></li>
+            <li><a href="./aboutClient.html#header-bottom" target="_top">客户案例</a></li>
+            <li><a href="./aboutNews.html#header-bottom" target="_top">新闻</a></li>
           </ul>
         </div>
       </div>
@@ -47,9 +47,9 @@
         <div class="widget">
           <h4 class="title">关于我们</h4>
           <ul>
-            <li><a href="./aboutIndex.html" target="_top">公司简介</a></li>
-            <li><a href="./aboutContact.html" target="_top">联系我们</a></li>
-            <li><a href="./aboutJob.html" target="_top">招贤纳才</a></li>
+            <li><a href="./aboutIndex.html#header-bottom" target="_top">公司简介</a></li>
+            <li><a href="./aboutContact.html#header-bottom" target="_top">联系我们</a></li>
+            <li><a href="./aboutJob.html#header-bottom" target="_top">招贤纳才</a></li>
           </ul>
         </div>
       </div>
