--- a/header.html
+++ b/header.html
@@ -10,9 +10,9 @@
         <a href="#" class="btn btn-pink" data-toggle="modal" data-target="#myModal-1">申请加盟</a>
       </div>
       <ul class="nav navbar-nav navbar-right header-top">
-        <li><a href="productIsp.html">产品与解决方案</a></li>
-        <li><a href="productIsp.html">渠道合作</a></li>
-        <li><a href="aboutIndex.html">关于我们</a></li>
+        <li><a href="productIsp.html#product-bottom-header">产品与解决方案</a></li>
+        <li><a href="productIsp.html#product-bottom-header">渠道合作</a></li>
+        <li><a href="aboutIndex.html#header-bottom">关于我们</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
@@ -25,7 +25,7 @@
               <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">产品与解决方案</h3>
               <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
                 <ul class="text-item-col" role="presentation">
-                  <li><a href="productIsp.html">Panabit智能应用网关</a></li>
+                  <li><a href="productIsp.html#product-bottom-header">Panabit智能应用网关</a></li>
                   <li><a href="ixcache.html">iXCache内存缓存加速</a></li>
                   <li><a href="panalog.html">Panalog数据存留审计</a></li>
                 </ul>
@@ -66,11 +66,11 @@
               <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">关于我们</h3>
               <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
                 <ul class="text-item-col" role="presentation">
-                  <li><a href="aboutIndex.html">公司简介</a></li>
-                  <li><a href="aboutContact.html">联系我们</a></li>
-                  <li><a href="aboutJob.html">招贤纳才</a></li>
-                  <li><a href="aboutNews.html">最新动态</a></li>
-                  <li><a href="aboutClient.html">荣誉客户</a></li>
+                  <li><a href="aboutIndex.html#header-bottom">公司简介</a></li>
+                  <li><a href="aboutContact.html#header-bottom">联系我们</a></li>
+                  <li><a href="aboutJob.html#header-bottom">招贤纳才</a></li>
+                  <li><a href="aboutNews.html#header-bottom">最新动态</a></li>
+                  <li><a href="aboutClient.html#header-bottom">荣誉客户</a></li>
                 </ul>
               </div>
             </div>
