--- a/productSmb.html
+++ b/productSmb.html
@@ -51,8 +51,8 @@
         <div class="row bottom">
           <div class="row col-sm-6 buy-bottom">
             <div class="col-md-6">
-              <a href="http://panabit.com/smb/index.html" class="buy-content-button buy-content-buy" target="_blank">
-              </a>
+              <span class="buy-content-button buy-content-buy" data-toggle="modal" data-target="#myModal-buy">
+              </span>
             </div>
             <div class="col-md-6">
               <a href="http://panabit.com/uploads/doc/SMB-M100.pdf" class="buy-content-button buy-content-info" target="_blank">
@@ -60,8 +60,8 @@
           </div>
           <div class="row col-sm-6 buy-bottom">
             <div class="col-md-6">
-              <a href="http://panabit.com/smb/index.html" class="buy-content-button buy-content-buy" target="_blank">
-              </a>
+              <span class="buy-content-button buy-content-buy" data-toggle="modal" data-target="#myModal-buy">
+              </span>
             </div>
             <div class="col-md-6">
               <a href="http://panabit.com/uploads/doc/SMB-M200.pdf" class="buy-content-button buy-content-info" target="_blank">
