--- a/headerBottom.html
+++ b/headerBottom.html
@@ -25,11 +25,11 @@
   <nav class="subnav navbar navbar-default">
     <div class="container">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="aboutIndex.html"  target="_top">公司简介</a></li>
-        <li><a href="aboutContact.html"  target="_top">联系我们</a></li>
-        <li><a href="aboutJob.html"  target="_top">招贤纳才</a></li>
-        <li><a href="aboutNews.html"  target="_top">最新动态</a></li>
-        <li><a href="aboutClient.html"  target="_top">荣誉客户</a></li>
+        <li><a href="aboutIndex.html#header-bottom"  target="_top">公司简介</a></li>
+        <li><a href="aboutContact.html#header-bottom"  target="_top">联系我们</a></li>
+        <li><a href="aboutJob.html#header-bottom"  target="_top">招贤纳才</a></li>
+        <li><a href="aboutNews.html#header-bottom"  target="_top">最新动态</a></li>
+        <li><a href="aboutClient.html#header-bottom"  target="_top">荣誉客户</a></li>
       </ul>
     </div>
   </nav>
