--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <a href="#" class="btn btn-pink" data-toggle="modal" data-target="#myModal-1">申请加盟</a>
           </div>
           <ul class="nav navbar-nav navbar-right header-top">
-            <li><a href="productIsp.html">产品与解决方案</a></li>
-            <li><a href="productIsp.html">渠道合作</a></li>
-            <li><a href="aboutIndex.html">关于我们</a></li>
+            <li><a href="productIsp.html#product-bottom-header">产品与解决方案</a></li>
+            <li><a href="productIsp.html#product-bottom-header">渠道合作</a></li>
+            <li><a href="aboutIndex.html#header-bottom">关于我们</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
@@ -39,7 +39,7 @@
                   <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">产品与解决方案</h3>
                   <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
                     <ul class="text-item-col" role="presentation">
-                      <li><a href="productIsp.html">Panabit智能应用网关</a></li>
+                      <li><a href="productIsp.html#product-bottom-header">Panabit智能应用网关</a></li>
                       <li><a href="ixcache.html">iXCache内存缓存加速</a></li>
                       <li><a href="panalog.html">Panalog数据存留审计</a></li>
                     </ul>
@@ -80,11 +80,11 @@
                   <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">关于我们</h3>
                   <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
                     <ul class="text-item-col" role="presentation">
-                      <li><a href="aboutIndex.html">公司简介</a></li>
-                      <li><a href="aboutContact.html">联系我们</a></li>
-                      <li><a href="aboutJob.html">招贤纳才</a></li>
-                      <li><a href="aboutNews.html">最新动态</a></li>
-                      <li><a href="aboutClient.html">荣誉客户</a></li>
+                      <li><a href="aboutIndex.html#header-bottom">公司简介</a></li>
+                      <li><a href="aboutContact.html#header-bottom">联系我们</a></li>
+                      <li><a href="aboutJob.html#header-bottom">招贤纳才</a></li>
+                      <li><a href="aboutNews.html#header-bottom">最新动态</a></li>
+                      <li><a href="aboutClient.html#header-bottom">荣誉客户</a></li>
                     </ul>
                   </div>
                 </div>
@@ -108,7 +108,7 @@
             <div class="hack"></div>
           </div>
         </div>
-        <div class="swiper-slide" style="background-color:#f39a00;background-image:url(img/panabit-banner2.png);" onclick="linkHtml('productIsp.html')">
+        <div class="swiper-slide" style="background-color:#f39a00;background-image:url(img/panabit-banner2.png);" onclick="linkHtml('productIsp.html#product-bottom-header')">
           <!-- <img src="img/panabit-banner2.png" alt=""> -->
           <div class="container">
             <div class="banner-title">
@@ -148,7 +148,7 @@
     <section class="outer-section product">
       <div class=" banner-button">
         <div class="container product-navbar">
-          <div class="col-md-4" onclick="linkHtml('productIsp.html')">
+          <div class="col-md-4" onclick="linkHtml('productIsp.html#product-bottom-header')">
             <p>智能应用网关</p>
             <p>Panabit</p>
           </div>
