--- a/productBottomHeader.html
+++ b/productBottomHeader.html
@@ -26,11 +26,11 @@
   <nav class="subnav navbar navbar-default">
     <div class="container">
       <ul class="nav navbar-nav navbar-left">
-        <li><a href="productIsp.html"  target="_top">运营商</a></li>
-        <li><a href="productEnterprise.html"  target="_top">企业版</a></li>
-        <li><a href="productAreas.html"  target="_top">小区版</a></li>
-        <li><a href="productNetcafe.html"  target="_top">网吧版</a></li>
-        <li><a href="productSmb.html"  target="_top">SMB版</a></li>
+        <li><a href="productIsp.html#product-bottom-header"  target="_top">运营商</a></li>
+        <li><a href="productEnterprise.html#product-bottom-header"  target="_top">企业版</a></li>
+        <li><a href="productAreas.html#product-bottom-header"  target="_top">小区版</a></li>
+        <li><a href="productNetcafe.html#product-bottom-header"  target="_top">网吧版</a></li>
+        <li><a href="productSmb.html#product-bottom-header"  target="_top">SMB版</a></li>
       </ul>
     </div>
   </nav>
