修改移动端的样式

--- a/index.html
+++ b/index.html
@@ -148,15 +148,15 @@
     <section class="outer-section product">
       <div class=" banner-button">
         <div class="container product-navbar">
-          <div class="col-md-4" onclick="linkHtml('productIsp.html#product-bottom-header')">
+          <div class="col-md-4 col-xs-4 " onclick="linkHtml('productIsp.html#product-bottom-header')">
             <p>智能应用网关</p>
             <p>Panabit</p>
           </div>
-          <div class="col-md-4" onclick="linkHtml('ixcache.html')">
+          <div class="col-md-4 col-xs-4" onclick="linkHtml('ixcache.html')">
             <p>内容缓存加速</p>
             <p>iXCache</p>
           </div>
-          <div class="col-md-4" onclick="linkHtml('panalog.html')">
+          <div class="col-md-4 col-xs-4" onclick="linkHtml('panalog.html')">
             <p>数据存留审计</p>
             <p>Panalog</p>
           </div>
