--- a/productNetcafe.html
+++ b/productNetcafe.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="client">
           <h1 class="content-title">荣誉客户</h1>
-          <a href="" class="more"><p>更多客户></p></a>
+          <a href="aboutClient.html" class="more"><p>更多客户></p></a>
           <ul class="row">
             <li class="col-md-3"><img src="img/product-client1.png" alt=""></li>
             <li class="col-md-3"><img src="img/product-client2.png" alt=""></li>
