--- a/productNetcafe.html
+++ b/productNetcafe.html
@@ -31,17 +31,17 @@
         <div>
           <h2 class="product-title">不仅仅只是快，更重要的是稳、准、狠</h2>
           <ul class="row block">
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>游戏流畅</p>
               </div>
             </li>
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>视频秒开</p>
               </div>
             </li>
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>一键维护</p>
               </div>
