--- a/case-content.html
+++ b/case-content.html
@@ -1,7 +1,7 @@
 <div class="container" style="clear:both;">
   <h1 class="content-title" style="margin-top: 150px;">解决方案</h1>
   <ul class="row case-content">
-    <li class="col-md-3">
+    <li class="col-md-3 col-xs-12">
         <a href="#">
           <img src="img/case1.jpg" alt="中国移动网络游戏加速">
           <div class="mask">
@@ -11,7 +11,7 @@
         </a>
         <a href="#"><h2>中国移动网络游戏加速</h2></a>
     </li>
-    <li class="col-md-3">
+    <li class="col-md-3 col-xs-12">
         <a href="#">
           <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
           <div class="mask">
@@ -21,7 +21,7 @@
         </a>
         <a href="#"><h2>中国移动网络游戏加速</h2></a>
     </li>
-    <li class="col-md-3">
+    <li class="col-md-3 col-xs-12">
         <a href="#">
           <img src="img/case3.jpg" alt="网络大数据系统分析方案">
           <div class="mask">
@@ -31,7 +31,7 @@
         </a>
         <a href="#"><h2>网络大数据系统分析方案</h2></a>
     </li>
-    <li class="col-md-3">
+    <li class="col-md-3 col-xs-12">
         <a href="#">
           <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
           <div class="mask">
