--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <section class="outer-section news">
       <div class="container">
         <div class="row">
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-xs-12">
             <h1 class="content-title">新闻</h1>
             <ul class="row">
               <li class="col-md-9"><a href="#" >Word天！这才是打造IDC金牌网络的正确姿势！</a> </li><li class="col-md-3">07-21</li>
@@ -177,7 +177,7 @@
               <li class="col-md-9"><a href="#" >你可能买了个假防火墙！</a> </li><li class="col-md-3">07-21</li>
             </ul>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4 col-xs-12">
             <h1 class="content-title">软件下载</h1>
             <ul class="row">
               <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>
@@ -186,7 +186,7 @@
               <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>
             </ul>
           </div>
-          <div class="col-md-4 img-containers">
+          <div class="col-sm-4 col-xs-12 img-containers">
             <img src="img/news.jpg" alt="">
           </div>
         </div>
