--- a/productAreas.html
+++ b/productAreas.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Panabit小区版</title>
+  <!-- <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/header.css">
@@ -30,17 +31,17 @@
         <div>
           <h2 class="product-title">不仅仅只是快，更重要的是稳、准、狠</h2>
           <ul class="row block">
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>一专多能</p>
               </div>
             </li>
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>按年租赁</p>
               </div>
             </li>
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>平滑升级</p>
               </div>
