--- a/productEnterprise.html
+++ b/productEnterprise.html
@@ -30,17 +30,17 @@
         <div>
           <h2 class="product-title">不仅仅只是快，更重要的是稳、准、狠</h2>
           <ul class="row block">
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>稳定高效</p>
               </div>
             </li>
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>带宽调优</p>
               </div>
             </li>
-            <li class="col-md-4">
+            <li class="col-md-4 col-xs-4">
               <div>
                 <p>安全易用</p>
               </div>
