响应式以及web调整

--- a/aboutJob.html
+++ b/aboutJob.html
@@ -24,8 +24,8 @@
       <div class="container">
         <p>派网软件公司是充满创新的软件企业，Panabit应用层流量管理引擎软件在国内独树一帜，多项技术水平在国内处于领先水平，在业界享有较高的声誉。诚聘助力Panabit事业的有志之士加盟，本招聘信息常年有效，如果您对以下任何岗位感兴趣，欢迎发送岗位名称 + 个人简历到邮箱：webmaster@panabit.com ，邮件主题请表明应聘字样。</p>
         <div class="row">
-          <div class="col-sm-2"><p>销售经理</p></div>
-          <ul class="col-sm-6 col-md-offset-2">
+          <div class="col-md-2"><p>销售经理</p></div>
+          <ul class="col-xs-12 col-md-8 col-md-offset-2">
            <li>工作职责：</li>
            <li>1. 完成公司制定的销售目标；</li>
            <li>2. 开拓新的客户，完成从测试体验到销售回款的整个销售过程；</li>
@@ -43,8 +43,8 @@
           </ul>
         </div>
         <div class="row">
-          <div class="col-sm-2"><p>售前工程师</p></div>
-          <ul class="col-sm-6 col-md-offset-2">
+          <div class="col-md-2"><p>售前工程师</p></div>
+          <ul class="col-md-8 col-xs-12 col-md-offset-2">
            <li>工作职责：</li>
            <li>1. 完成公司制定的销售目标；</li>
            <li>2. 开拓新的客户，完成从测试体验到销售回款的整个销售过程；</li>
