--- a/aboutNews.html
+++ b/aboutNews.html
@@ -24,8 +24,8 @@
     <section class="outer-section content2">
       <div class="container">
         <div class="row">
-          <div class="col-sm-2"><p>2017/6/18</p></div>
-          <ul class="col-sm-8 col-sm-offset-2">
+          <div class="col-md-2"><p>2017/6/18</p></div>
+          <ul class="col-md-8 col-md-offset-2">
            <li class="news-title">顺利中标“宁夏回族自治区通信管理局网络”项目</li>
            <li>2014年10月11日，Panabit顺利中标“宁夏回族自治区通信管理局互联网网络态势分析系统建设项目” 。
             随着互联网在经济社会中地位明显提升、与传统经济结合更加紧密、各类互联网应用对网民生活形态影响力度日益加深，宽带用户对网络质量的重视程度和要求也水涨船高。 不仅各运营商已普遍意识到“优化宽带服务质量、带宽精细化运营”的必要性，做为主管部门的通信管理局更是肩负着本地区公用/专用电信网统筹规划与行业管理、电信服务价格与服务 质量并协调电信企业间经济与业务关系的重担，急需专业的、高性能的互联网应用流量分析设备进行针对本地网络流量的全局分析与统筹规划，同时需要性能过硬的日志系统留存海量历 史数据。北京派网软件有限公司经过多年技术积累和市场检验，自主研发的Panabit智能应用网关始终处于流量分析识别领域内领头羊位置，可以很好的满足通信管理局的使用需求。
@@ -34,8 +34,8 @@
           </ul>
         </div>
         <div class="row">
-          <div class="col-sm-2"><p>2017/5/18</p></div>
-          <ul class="col-sm-8 col-sm-offset-2">
+          <div class="col-md-2"><p>2017/5/18</p></div>
+          <ul class="col-md-8 col-md-offset-2">
            <li class="news-title">为创新喝彩，Panabit助力众多知名互联网企业</li>
            <li class="news-title">创新是推动一个国家和民族向前发展的重要力量，也是推动整个人类社会向前发展的重要力量。随着中共中央、国务院关于深化体制机制改革加快实施创新驱动发展战略若干意见的出台， 创新生态系统时代正式全面到来。做为创新浪潮中的排头兵，互联网企业的运行方式产生着深刻变革，其针对自身企业网络带宽使用与管理也同步提出了看似简单实则苛刻的要求：
             <br>1) 绝对的千兆线速性能，保证互联网大带宽的稳定出口；
@@ -59,8 +59,8 @@
           </ul>
         </div>
         <div class="row">
-          <div class="col-sm-6"></div>
-          <div class="col-sm-6">
+          <div class="col-md-6"></div>
+          <div class="col-md-6">
             <button type="button" class="btn btn-default">加载更多</button>
           </div>
         </div>
