--- a/ixcache.html
+++ b/ixcache.html
@@ -34,11 +34,11 @@
         <p>伴随互联网视频、音乐、手机更新和直播类应用兴起，HTTP流量重回互联网流量巅峰。iXCache帮助网络运营者锁定核心业务痛点，将更多HTTP重载内容下沉到最贴近用户的本网环境。
 在节省出口带宽节约成本的同时，极大提高内网用户特别是无线用户的网络使用感受。视频秒开，应用秒下，不再是梦想！配合Panabit网关独有的缓存牵引模式，iXCache可灵活部署在桥接、路由、PPPoE和NAT等复杂网络环境，提供单机10G的输出密度和多达128台的超级集群。全面的集群监控技术和分应用优化技术，为iXCache用户提供了无与伦比的使用感受。</p>
         <ul class="row content2-bottom">
-          <li class="col-md-6">
+          <li class="col-md-6 col-xs-6">
             <p>单机输出速度</p>
             <h1 class="content-title">10G</h1>
           </li>
-          <li class="col-md-6">
+          <li class="col-md-6 col-xs-6">
             <p>超级集群</p>
             <h1 class="content-title"><span>多达</span>128台</h1>
           </li>
@@ -51,35 +51,35 @@
         <p>支持八大类资源缓存</p>
         <div style="width: 1200px;margin:0 auto;">
           <ul class="row">
-            <li class="col-md-3">
+            <li class="col-md-3 col-xs-3">
               <img src="img/ixchache-logo1.png" alt="">
               <p>web视频</p>
             </li>
-            <li class="col-md-3">
+            <li class="col-md-3 col-xs-3">
               <img src="img/ixchache-logo2.png" alt="">
               <p>移动视频</p>
             </li>
-            <li class="col-md-3">
+            <li class="col-md-3 col-xs-3">
               <img src="img/ixchache-logo3.png" alt="">
               <p>web音乐</p>
             </li>
-            <li class="col-md-3">
+            <li class="col-md-3 col-xs-3">
               <img src="img/ixchache-logo4.png" alt="">
               <p>移动视频</p>
             </li>
-            <li class="col-md-3 clear">
+            <li class="col-md-3 col-xs-3 clear">
               <img src="img/ixchache-logo5.png" alt="">
               <p>软件下载</p>
             </li>
-            <li class="col-md-3">
+            <li class="col-md-3 col-xs-3">
               <img src="img/ixchache-logo6.png" alt="">
               <p>应用商店</p>
             </li>
-            <li class="col-md-3">
+            <li class="col-md-3 col-xs-3">
               <img src="img/ixchache-logo7.png" alt="">
               <p>游戏补丁</p>
             </li>
-            <li class="col-md-3">
+            <li class="col-md-3 col-xs-3">
               <img src="img/ixchache-logo8.png" alt="">
               <p>其他</p>
             </li>
