--- a/panalog.html
+++ b/panalog.html
@@ -55,13 +55,13 @@
     <section class="content5">
       <h1 class="content-title">更广泛的内容审计</h1>
       <ul class="row">
-        <li class="col-md-3">流量日志、应用日志</li>
-        <li class="col-md-2">流量流向</li>
-        <li class="col-md-3">域名统计</li>
-        <li class="col-md-4">应用节点日志<br>（如游戏服务器地址、土豆服务器地址）</li>
-        <li class="col-md-3">IP日志、NAT日志</li>
-        <li class="col-md-2">用户行为分析</li>
-        <li class="col-md-3">敏感事件日志、微博、QQ、URL、淘宝</li>
+        <li class="col-md-3 col-xs-6">流量日志、应用日志</li>
+        <li class="col-md-3 col-xs-6">流量流向</li>
+        <li class="col-md-3 col-xs-6">域名统计</li>
+        <li class="col-md-3 col-xs-6">应用节点日志<br>（如游戏服务器地址、土豆服务器地址）</li>
+        <li class="col-md-3 col-xs-6">IP日志、NAT日志</li>
+        <li class="col-md-3 col-xs-6">用户行为分析</li>
+        <li class="col-md-3 col-xs-6">敏感事件日志、微博、QQ、URL、淘宝</li>
       </ul>
     </section>
   </div>
