--- a/aboutContact.html
+++ b/aboutContact.html
@@ -91,7 +91,9 @@
     </section>
   </div>
   <div id="footer"></div>
+
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/jquery.tap.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
   <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=055423e24a8756b527927b781bb95b57"></script>
   <script src="js/common.js"></script>
