--- a/case-content.html
+++ b/case-content.html
@@ -1,45 +1,45 @@
 <div class="container" style="clear:both;">
   <h1 class="content-title" style="margin-top: 150px;">解决方案</h1>
   <ul class="row case-content">
-    <li class="col-md-3 col-xs-12">
-        <a href="#">
-          <img src="img/case1.jpg" alt="中国移动网络游戏加速">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>中国移动网络游戏加速</h2></a>
+    <li class="col-md-3 col-sm-6 col-xs-12">
+      <a class="case-item" href="#">
+        <img src="img/case1.jpg" alt="中国移动网络游戏加速">
+        <div class="mask">
+          <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+          <span class="btn">更多详情</span>
+        </div>
+      </a>
+      <a href="#"><h2>中国移动网络游戏加速</h2></a>
     </li>
-    <li class="col-md-3 col-xs-12">
-        <a href="#">
-          <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>中国移动网络游戏加速</h2></a>
+    <li class="col-md-3 col-sm-6 col-xs-12">
+      <a class="case-item" href="#">
+        <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
+        <div class="mask">
+          <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+          <span class="btn">更多详情</span>
+        </div>
+      </a>
+      <a href="#"><h2>中国移动网络游戏加速</h2></a>
     </li>
-    <li class="col-md-3 col-xs-12">
-        <a href="#">
-          <img src="img/case3.jpg" alt="网络大数据系统分析方案">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>网络大数据系统分析方案</h2></a>
+    <li class="col-md-3 col-sm-6 col-xs-12">
+      <a class="case-item" href="#">
+        <img src="img/case3.jpg" alt="网络大数据系统分析方案">
+        <div class="mask">
+          <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+          <span class="btn">更多详情</span>
+        </div>
+      </a>
+      <a href="#"><h2>网络大数据系统分析方案</h2></a>
     </li>
-    <li class="col-md-3 col-xs-12">
-        <a href="#">
-          <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
-          <div class="mask">
-            <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
-            <span class="btn">更多详情</span>
-          </div>
-        </a>
-        <a href="#"><h2>智能应用网关网络出口解决方案</h2></a>
+    <li class="col-md-3 col-sm-6 col-xs-12">
+      <a class="case-item" href="#">
+        <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
+        <div class="mask">
+          <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
+          <span class="btn">更多详情</span>
+        </div>
+      </a>
+      <a href="#"><h2>智能应用网关网络出口解决方案</h2></a>
     </li>
   </ul>
 </div>
