--- a/productEnterprise.html
+++ b/productEnterprise.html
@@ -63,6 +63,7 @@
           <h1 class="product-title">性能卓越的出口一体化网关</h1>
           <p style="text-align: left">Panabit超卓性能轻松实现所有功能开启后网络更高效率、更低延迟、更佳用户体验。配合低成本链路聚合，助力企业完美脱离不停采购设备、不断扩充带宽而收效甚微的困局。</p>
         </div>
+        <img src="img/product-bg2.jpg">
       </div>
     </section>
     <section id="case-content">
@@ -73,21 +74,23 @@
           <h1 class="content-title">荣誉客户</h1>
           <a href="aboutClient.html" class="more"><p>更多客户></p></a>
           <ul class="row">
-            <li class="col-md-3"><img src="img/product-client1.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client2.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client3.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client4.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client5.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client6.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client7.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client1.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client2.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client3.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client4.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client5.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client6.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client7.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client8.png" alt=""></li>
           </ul>
         </div>
       </div>
     </section>
   </div>
   <div id="footer"></div>
+
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/jquery.tap.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/common.js"></script>
 </body>
