--- a/case.html
+++ b/case.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
   <div class="row case-nav">
-    <div class="content-title col-sm-2">解决方案</div>
+    <div class="content-title">解决方案</div>
       <ul id="case-tab" class="nav nav-pills">
         <li role="presentation" class="active">运营商</li>
         <li role="presentation">企业</li>
@@ -11,8 +11,8 @@
   </div>
   <div>
     <ul class="row case-content tab-content">
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case1.jpg" alt="中国移动网络游戏加速">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -21,8 +21,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -31,8 +31,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case3.jpg" alt="网络大数据系统分析方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -41,8 +41,8 @@
           </a>
           <a href="#"><h2>网络大数据系统分析方案</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -53,8 +53,8 @@
       </li>
     </ul>
     <ul class="row case-content tab-content" style="display: none;">
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case1.jpg" alt="中国移动网络游戏加速">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -63,8 +63,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速1</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -73,8 +73,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case3.jpg" alt="网络大数据系统分析方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -83,8 +83,8 @@
           </a>
           <a href="#"><h2>网络大数据系统分析方案</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -95,8 +95,8 @@
       </li>
     </ul>
     <ul class="row case-content tab-content" style="display: none;">
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case1.jpg" alt="中国移动网络游戏加速">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -105,8 +105,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速2</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -115,8 +115,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case3.jpg" alt="网络大数据系统分析方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -125,8 +125,8 @@
           </a>
           <a href="#"><h2>网络大数据系统分析方案</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -137,8 +137,8 @@
       </li>
     </ul>
     <ul class="row case-content tab-content" style="display: none;">
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case1.jpg" alt="中国移动网络游戏加速">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -147,8 +147,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速3</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case2.jpg" alt="智能DNS管控在实际中应用">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -157,8 +157,8 @@
           </a>
           <a href="#"><h2>中国移动网络游戏加速</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case3.jpg" alt="网络大数据系统分析方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
@@ -167,8 +167,8 @@
           </a>
           <a href="#"><h2>网络大数据系统分析方案</h2></a>
       </li>
-      <li class="col-md-3">
-          <a href="#">
+      <li class="col-md-3 col-sm-6 col-xs-12">
+        <a class="case-item" href="#">
             <img src="img/case4.jpg" alt="智能应用网关网络出口解决方案">
             <div class="mask">
               <p>中国移动主要以移动通信服务<br>为主，带宽接入服务起步较晚</p>
