--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
   <!-- footer -->
   <div id="footer"></div>
 <script src="js/jquery-3.2.1.min.js"></script>
+<script src="js/jquery.tap.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/swiper-3.4.2.jquery.min.js"></script>
 <script>
