--- a/ixcache.html
+++ b/ixcache.html
@@ -143,7 +143,9 @@
     </section>
   </div>
   <div id="footer"></div>
+
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/jquery.tap.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
   <script src="js/common.js"></script>
 </body>
