--- a/productBottomHeader.html
+++ b/productBottomHeader.html
@@ -34,7 +34,9 @@
       </ul>
     </div>
   </nav>
+
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/jquery.tap.min.js"></script>
   <script>
     $(function() {
       let currentList = window.location.href.split('/');
