--- a/productSmb.html
+++ b/productSmb.html
@@ -145,21 +145,23 @@
           <h1 class="content-title">荣誉客户</h1>
           <a href="aboutClient.html" class="more"><p>更多客户></p></a>
           <ul class="row">
-            <li class="col-md-3"><img src="img/product-client1.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client2.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client3.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client4.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client5.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client6.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client7.png" alt=""></li>
-            <li class="col-md-3"><img src="img/product-client8.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client1.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client2.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client3.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client4.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client5.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client6.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client7.png" alt=""></li>
+            <li class="col-md-3 col-sm-6 col-xs-12"><img src="img/product-client8.png" alt=""></li>
           </ul>
         </div>
       </div>
     </section>
   </div>
   <div id="footer"></div>
+
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/jquery.tap.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src='js/common.js'></script>
 </body>
