--- a/aboutClient.html
+++ b/aboutClient.html
@@ -22,16 +22,16 @@
       <div class="container">
         <div class="content-nav">
             <ul class="row" id="tab">
-              <li class="col-md-2" id="inner0">运营商</li>
-              <li class="col-md-3" id="inner1">政府/部队/事业单位</li>
-              <li class="col-md-2" id="inner2">高校</li>
-              <li class="col-md-2" id="inner3">企业</li>
-              <li class="col-md-3" id="inner4">其他行业</li>
+              <li class="col-md-2 col-sm-2" id="inner0">运营商</li>
+              <li class="col-md-3 col-sm-3" id="inner1">政府/部队/事业单位</li>
+              <li class="col-md-2 col-sm-2" id="inner2">高校</li>
+              <li class="col-md-2 col-sm-2" id="inner3">企业</li>
+              <li class="col-md-3 col-sm-3" id="inner4">其他行业</li>
             </ul>
         </div>
         <div class="content-container">
           <div class="bottom-table row">
-            <ul class="col-md-6">
+            <ul class="col-md-6 col-sm-6">
               <li>中国移动通信集团广东有限公司</li>
               <li>中国移动通信集团河北有限公司</li>
               <li>中国移动通信集团山西有限公司</li>
@@ -53,7 +53,7 @@
               <li>河南省广播电影电视局</li>
               <li>贵州省广播电影电视局</li>
             </ul>
-            <ul class="col-md-6">
+            <ul class="col-md-6 col-sm-6">
               <li>深圳市天威视讯股份有限公司</li>
               <li>浙江华数广电网络股份有限公司</li>
               <li>鹏博士电信传媒集团</li>
