--- a/header.html
+++ b/header.html
@@ -51,8 +51,8 @@
               <h3 id="menu-title-20" class="menu-text-item-tit J-mobile-li-third">渠道合作</h3>
               <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
                 <ul class="text-item-col" role="presentation">
-                  <li><a href="#" data-toggle="modal" data-target="#myModal">免费试用</a></li>
-                  <li><a href="#" data-toggle="modal" data-target="#myModal-1">申请加盟</a></li>
+                  <!-- <li><a href="#" data-toggle="modal" data-target="#myModal">免费试用</a></li>
+                  <li><a href="#" data-toggle="modal" data-target="#myModal-1">申请加盟</a></li> -->
                   <li><a href="https://115.28.107.42:31443/login.php" target="_blank">PN管理</a></li>
                   <li><a href="https://115.28.107.42:51443/Products/wangba/login.php" target="_blank">网吧版后台</a></li>
                   <li><a href="https://partner.panabit.com/" target="_blank">合作伙伴登陆</a></li>
@@ -67,7 +67,7 @@
               <div class="menu-text-item-con J-mobile-third" role="list" tabindex="0" aria-labelledby="menu-title-20">
                 <ul class="text-item-col" role="presentation">
                   <li><a href="aboutIndex.html#header-bottom">公司简介</a></li>
-                  <li><a href="aboutContact.html#header-bottom">联系我们</a></li>
+                  <!-- <li><a href="aboutContact.html#header-bottom">联系我们</a></li> -->
                   <li><a href="aboutJob.html#header-bottom">招贤纳才</a></li>
                   <li><a href="aboutNews.html#header-bottom">最新动态</a></li>
                   <li><a href="aboutClient.html#header-bottom">荣誉客户</a></li>
