--- a/solution.html
+++ b/solution.html
@@ -26,10 +26,10 @@
       <div class="container">
         <div class="content-nav">
           <ul class="row" id="tab">
-            <li class="col-md-3" id="inner0">运营商</li>
-            <li class="col-md-3" id="inner1">企业</li>
-            <li class="col-md-3" id="inner2">小区</li>
-            <li class="col-md-3" id="inner3">网吧</li>
+            <li class="col-md-3 col-sm-3" id="inner0">运营商</li>
+            <li class="col-md-3 col-sm-3" id="inner1">企业</li>
+            <li class="col-md-3 col-sm-3" id="inner2">小区</li>
+            <li class="col-md-3 col-sm-3" id="inner3">网吧</li>
           </ul>
         </div>
       </div>
@@ -38,7 +38,7 @@
       <div class="container">
         <p class="content-container">Panabit专门为全国普教行业提供的一款高性能、高可用性、功能丰富的出口一体优化设备。处理能力为600Mbps，特别适用于同时在线800人以下的普教客户群体。不但可以满足用户对网络流量最细致粒度的可视、可控、可审计的核心需求，同时能够提供业内领先的应用分流、应用负载均衡及其他丰富功能。</p>
         <div class="content-con">
-          <ul class="row">
+          <ul class="row clearRow">
             <li class="col-md-4">性能卓越的出口一体化网关</li>
             <li class="col-md-5">PPPOE</li>
             <li class="col-md-3">移动终端及业务识别</li>
