--- a/aboutContact.html
+++ b/aboutContact.html
@@ -24,7 +24,7 @@
       <div class="container">
         <h4 class="content-title">联系方式</h4>
         <div class="row content-row">
-          <div class="col-md-4 col-md-offset-1">
+          <div class="col-md-6">
             <ul>
               <li>邮编：100094</li>
               <li>咨询服务：400-898-1066</li>
@@ -32,7 +32,7 @@
               <li>传真：010 - 53269937</li>
             </ul>
           </div>
-          <div class="col-md-6 col-md-offset-1">
+          <div class="col-md-6">
             <ul>
               <li>地址：北京市海淀区丰慧中路7号新材料创业大厦6层B622-623</li>
               <li>网址： www.panabit.com</li>
@@ -47,41 +47,41 @@
       <div class="container">
         <h4 class="content-title">在线技术服务</h4>
         <div class="row content-row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-6">
             <ul class="row frist-ul">
-              <li class="col-md-4">
+              <li class="col-md-4 col-sm-12">
               PA流控技术群
               </li>
-              <li class="col-md-8">
+              <li class="col-md-8 col-sm-12">
                 <p>Panabit-网吧版①群：348497223[满]</p>
                 <p>Panabit-网吧②群：463545675</p>
               </li>
-              <li class="col-md-4" style="margin-top: 50px;">
+              <li class="col-md-4 col-sm-4" style="margin-top: 50px;">
                 IXCache缓存
               </li>
-              <li class="col-md-8" style="margin-top: 50px;">
+              <li class="col-md-8 col-sm-8" style="margin-top: 50px;">
                 缓存交流群61310125 
               </li>
             </ul>
           </div>
-          <div class="col-md-5  col-md-offset-1">
+          <div class="col-md-6 col-sm-6 col-md-offset-1">
             <ul class="row">
-              <li class="col-md-4">
+              <li class="col-md-4 col-sm-4">
                 Panlog日志
               </li>
-              <li class="col-md-8">
+              <li class="col-md-8 col-sm-8">
                 日志交流群 397407302
               </li>
-              <li class="col-md-4">
+              <li class="col-md-4 col-sm-4">
                 PA日志技术群
               </li>
-              <li class="col-md-8">
+              <li class="col-md-8 col-sm-8">
                 PanaLog交流群:397407302
               </li>
-              <li class="col-md-4">
+              <li class="col-md-4 col-sm-4">
                 PA缓存技术群
               </li>
-              <li class="col-md-8">
+              <li class="col-md-8 col-sm-8">
                 Panabit-缓存①群:61310125
               </li>
             </ul>
