--- a/aboutContact.html
+++ b/aboutContact.html
@@ -60,7 +60,7 @@
                 IXCache缓存
               </li>
               <li class="col-md-8 col-sm-8" style="margin-top: 50px;">
-                缓存交流群61310125 
+                iXCache专业版交流群：231396927
               </li>
             </ul>
           </div>
@@ -81,9 +81,13 @@
               <li class="col-md-4 col-sm-4">
                 PA缓存技术群
               </li>
-              <li class="col-md-8 col-sm-8">
-                Panabit-缓存①群:61310125
+              <li class="col-md-8 col-sm-12">
+                <p>Panabit-缓存①群：61310125</p>
+                <p>Panabit-缓存②群：329124443</p>
               </li>
+             <!--  <li class="col-md-8 col-sm-8">
+                Panabit-缓存①群:61310125
+              </li> -->
             </ul>
           </div>
         </div>
