--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@
                 <ul class="text-item-col" role="presentation">
                   <li><a href="productIsp.html#product-bottom-header">Panabit智能应用网关</a></li>
                   <li><a href="ixcache.html">iXCache内存缓存加速</a></li>
-                  <li><a href="panalog.html">Panalog数据存留审计</a></li>
+                  <li><a href="panalog.html">PanaLog数据留存审计</a></li>
                 </ul>
               </div>
             </div>
