--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <ul class="text-item-col" role="presentation">
                       <li><a href="productIsp.html#product-bottom-header">Panabit智能应用网关</a></li>
                       <li><a href="ixcache.html">iXCache内存缓存加速</a></li>
-                      <li><a href="panalog.html">Panalog数据存留审计</a></li>
+                      <li><a href="panalog.html">PanaLog数据留存审计</a></li>
                     </ul>
                   </div>
                 </div>
@@ -102,7 +102,7 @@
           <!-- <img src="img/panabit-banner1.png" alt=""> -->
             <div class="banner-title">
               <h1>国内领先的网络应用层解决方案供应商</h1>
-              <p>基于广受好评的网络应用识别优化引擎以及业界领先的PANAOS操作系统</p>
+              <p>基于广受好评的网络应用识别优化引擎以及业界领先的PanaOS操作系统</p>
               
             </div>
             <div class="hack"></div>
@@ -113,7 +113,7 @@
           <div class="container">
             <div class="banner-title">
               <h1>Panabit智能应用路由</h1>
-              <p>网络进出口运维和运营的首选伴侣</p>
+              <p>网络运维和运营的首选伴侣</p>
               
             </div>
             <div class="hack"></div>
