--- a/footer.html
+++ b/footer.html
@@ -26,7 +26,7 @@
         <div class="widget">
           <h4 class="title">服务与支持</h4>
           <ul>
-            <li><a href="" target="_top">软件下载</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#myModal">软件下载</a></li>
             <li><a href="./productIsp.html" target="_top">渠道合作</a></li>
             <li><a href="http://forum.panabit.com/" target="_top">论坛</a></li>
           </ul>
