--- a/ixcache.html
+++ b/ixcache.html
@@ -92,34 +92,34 @@
       <div class="content4">
         <h1 class="content-title">安装与使用</h1>
         <ul class="row">
-          <li class="col-sm-6 row">
-            <div>
-              <p class="col-md-3"><span class="content4-item-title">硬件配置</span></p>
-            <p class="col-md-9">CPU : 至少双核，支持超线程；<br>
-            内 存：至少4G；<br>
-            系统盘：一块，容量至少2G；<br>
-            数据盘：至少一块，单盘大小建议2-4T；<br>
-            网卡：两张，建议Intel型号；
-            </p>
-            <p class="bottom-text col-md-9 col-md-offset-3">专业版硬件推荐配置</p>
+          <li class="col-lg-6">
+            <div class="row">
+              <p class="col-sm-3"><span class="content4-item-title">硬件配置</span></p>
+              <p class="col-sm-9">CPU : 至少双核，支持超线程；<br>
+              内 存：至少4G；<br>
+              系统盘：一块，容量至少2G；<br>
+              数据盘：至少一块，单盘大小建议2-4T；<br>
+              网卡：两张，建议Intel型号；
+              </p>
+              <p class="bottom-text col-sm-9 col-sm-offset-3">专业版硬件推荐配置</p>
             </div>
           </li>
-          <li class="col-sm-6 row">
-            <div>
-            <p class="col-md-3"><span class="content4-item-title">下载</span></p>
-            <p class="col-md-9">最新升级包<br>
+          <li class="col-lg-6">
+            <div class="row">
+            <p class="col-sm-3"><span class="content4-item-title">下载</span></p>
+            <p class="col-sm-9">最新升级包<br>
             一键安装ios下载</p>
-            <!-- <p class="col-md-9 col-md-offset-3"></p> -->
-            <p class="col-md-3 bottom-text-m"><span class="content4-item-title">交流互动</span></p>
-            <p class="col-md-9 bottom-text-m">iXCache论坛版块<br>
+            <!-- <p class="col-sm-9 col-sm-offset-3"></p> -->
+            <p class="col-sm-3 bottom-text-m"><span class="content4-item-title">交流互动</span></p>
+            <p class="col-sm-9 bottom-text-m">iXCache论坛版块<br>
             iXCache常见问题答疑<br>
             官方QQ群：61310125</p>
             </div>
           </li>
-          <li class="col-sm-6 row">
-            <div>
-              <p class="col-md-3"><span class="content4-item-title">安装部署</span></p>
-            <p class="col-md-9">
+          <li class="col-lg-6">
+            <div class="row">
+              <p class="col-sm-3"><span class="content4-item-title">安装部署</span></p>
+            <p class="col-sm-9">
               <span>安装向导</span>    
               <span>牵引模式部署</span><br>        
               <span>镜像模式部署</span>        
@@ -127,10 +127,10 @@
             </p>
             </div>
           </li>
-          <li class="col-sm-6 row">
-            <div>
-              <p class="col-md-3"><span class="content4-item-title">资源</span></p>
-            <p class="col-md-9">
+          <li class="col-lg-6">
+            <div class="row">
+              <p class="col-sm-3"><span class="content4-item-title">资源</span></p>
+            <p class="col-sm-9">
               <span>工作原理简介</span>    
               <span>缓存资源列表</span><br>        
               <span>加速效果预览</span>        
