--- a/solution.html
+++ b/solution.html
@@ -26,10 +26,10 @@
       <div class="container">
         <div class="content-nav">
           <ul class="row" id="tab">
-            <li class="col-md-3 col-sm-3" id="inner0">运营商</li>
-            <li class="col-md-3 col-sm-3" id="inner1">企业</li>
-            <li class="col-md-3 col-sm-3" id="inner2">小区</li>
-            <li class="col-md-3 col-sm-3" id="inner3">网吧</li>
+            <li class="col-xs-3" id="inner0">运营商</li>
+            <li class="col-xs-3" id="inner1">企业</li>
+            <li class="col-xs-3" id="inner2">小区</li>
+            <li class="col-xs-3" id="inner3">网吧</li>
           </ul>
         </div>
       </div>
