--- a/index.html
+++ b/index.html
@@ -169,24 +169,24 @@
     <section class="outer-section news">
       <div class="container">
         <div class="row">
-          <div class="col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-sm-6 col-xs-12">
             <h1 class="content-title">新闻</h1>
             <ul class="row">
-              <li class="col-md-9"><a href="#" >Word天！这才是打造IDC金牌网络的正确姿势！</a> </li><li class="col-md-3">07-21</li>
-              <li class="col-md-9"><a href="#" >为什么不起眼的小酒店却门庭若市？</a> </li><li class="col-md-3">07-21</li>  
-              <li class="col-md-9"><a href="#" >你可能买了个假防火墙！</a> </li><li class="col-md-3">07-21</li>
+              <li class="col-xs-9"><a href="#" >Word天！这才是打造IDC金牌网络的正确姿势！</a> </li><li class="col-xs-3 text-right">07-21</li>
+              <li class="col-xs-9"><a href="#" >为什么不起眼的小酒店却门庭若市？</a> </li><li class="col-xs-3 text-right">07-21</li>  
+              <li class="col-xs-9"><a href="#" >你可能买了个假防火墙！</a> </li><li class="col-xs-3 text-right">07-21</li>
             </ul>
           </div>
-          <div class="col-sm-4 col-xs-12">
+          <div class="col-lg-4 col-sm-6 col-xs-12">
             <h1 class="content-title">软件下载</h1>
             <ul class="row">
-              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>
-              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信
-              管理局网络</a> </li><li class="col-md-3">4-17</li>
-              <li class="col-md-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-md-3">4-17</li>
+              <li class="col-xs-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-xs-3 text-right">4-17</li>
+              <li class="col-xs-9"><a href="" >中标宁夏回族自治区通信
+              管理局网络</a> </li><li class="col-xs-3 text-right">4-17</li>
+              <li class="col-xs-9"><a href="" >中标宁夏回族自治区通信管理局网络</a> </li><li class="col-xs-3 text-right">4-17</li>
             </ul>
           </div>
-          <div class="col-sm-4 col-xs-12 img-containers">
+          <div class="col-lg-4 col-sm-12 col-xs-12 img-containers">
             <img src="img/news.jpg" alt="">
           </div>
         </div>
