--- a/productSmb.html
+++ b/productSmb.html
@@ -28,8 +28,8 @@
         <img src="img/product-smb.png" alt="">
       </div>
       <div class="content2">
-        <div style="width: 1000px; margin: 0 auto 80px; ">
-          <p>Panabit中小企业上网行为管理网关是全球领先、安全、稳定的中小企业上网行为管理网关。让中小企业不仅可以获得【最低带宽成本】，【最流畅上网享受】，【最大带机能力】，【最小采购成本】；而且还可以有效的防止上网人员进行无关的网络活动，杜绝带宽资源滥用，加快上网速率，提升工作效率；记录上网行为，防止PC中毒，智能数据分析提供可视化报表，为网络管理和优化提供决策依据。</p>
+        <div style="margin: 0 auto 80px; ">
+          <p class="">Panabit中小企业上网行为管理网关是全球领先、安全、稳定的中小企业上网行为管理网关。让中小企业不仅可以获得【最低带宽成本】，【最流畅上网享受】，【最大带机能力】，【最小采购成本】；而且还可以有效的防止上网人员进行无关的网络活动，杜绝带宽资源滥用，加快上网速率，提升工作效率；记录上网行为，防止PC中毒，智能数据分析提供可视化报表，为网络管理和优化提供决策依据。</p>
         </div>
       </div>
     </section>
@@ -41,14 +41,32 @@
       </div>
     </section>
     <section class="outer-section">
-      <div class="content-buy row">
-        <div class="col-md-6 buy-content" style="background-color: #a11f1f">
+      <div class="content-buy row clearRow">
+        <div class="col-md-6 col-sm-6 buy-content clearRow" style="background-color: #a11f1f">
           <img src="img/buy-content-number1.png" alt="">
+          <div class="row col-sm-12 buy-bottom clearRow">
+            <div class="col-md-6 col-sm-6 clearRow">
+              <span class="buy-content-button buy-content-buy" data-toggle="modal" data-target="#myModal-buy">
+              </span>
+            </div>
+            <div class="col-md-6 col-sm-6 clearRow">
+              <a href="http://panabit.com/uploads/doc/SMB-M100.pdf" class="buy-content-button buy-content-info" target="_blank">
+              </a></div>
+          </div>
         </div>
-        <div class="col-md-6 buy-content" style="background-color: #26398c">
+        <div class="col-md-6 col-sm-6 buy-content clearRow" style="background-color: #26398c">
           <img src="img/buy-content-number2.png" alt="">
+          <div class="row col-sm-12 buy-bottom clearRow">
+            <div class="col-md-6 col-sm-6 clearRow">
+              <span class="buy-content-button buy-content-buy" data-toggle="modal" data-target="#myModal-buy">
+              </span>
+            </div>
+            <div class="col-md-6 col-sm-6 clearRow">
+              <a href="http://panabit.com/uploads/doc/SMB-M200.pdf" class="buy-content-button buy-content-info" target="_blank">
+              </a></div>
+          </div>
         </div>
-        <div class="row bottom">
+        <!-- <div class="row bottom">
           <div class="row col-sm-6 buy-bottom">
             <div class="col-md-6">
               <span class="buy-content-button buy-content-buy" data-toggle="modal" data-target="#myModal-buy">
@@ -67,15 +85,15 @@
               <a href="http://panabit.com/uploads/doc/SMB-M200.pdf" class="buy-content-button buy-content-info" target="_blank">
               </a></div>
           </div>
-        </div>
+        </div> -->
         <div class="content-buy-info">
           <p>支持网关模式、网桥模式、混合模式，6千兆电口</p>
           <p>三月包换 一年保修 永久使用</p>
         </div>
         <ul class="content-buy-six">
-          <li class="col-md-4"><div>千兆线速<br>硬件<div></li>
-          <li class="col-md-4"><div>双OS引擎<br>处理<div></li>
-          <li class="col-md-4"><div>发烧级<br>专业流控<div></li>
+          <li class="col-md-4 col-sm-4"><div>千兆线速<br>硬件<div></li>
+          <li class="col-md-4 col-sm-4"><div>双OS引擎<br>处理<div></li>
+          <li class="col-md-4 col-sm-4"><div>发烧级<br>专业流控<div></li>
         </ul>
       </div>
     </section>
